--- a/sign-in.html
+++ b/sign-in.html
@@ -12,23 +12,50 @@
       <div class="sub-container">
         <div class="logo-sign-in">
             <a href="./index.html" title="로그인">
-            <img src="./image/group-logo.png"></img>
-        </a>
+              <img src="./image/group-logo.png"></img>
+            </a>
         </div>
+
         <div class="sign-in">
+
           <div class="sign-in-input">
             <div class="sub-title">아이디</div>
             <div><input type="email" placeholder="이메일을 입력해주세요."></input></div>
-        </div>
-        <div class="sign-in-input">
-          <div><div class="sub-title">비밀번호</div></div>
-          <div><input type="email" placeholder="이메일을 입력해주세요."></input></div>
-        </div>
-        <div class="button-regular">
-            <div>로그인</div>
-        </div>
+          </div>
+
+          <div class="sign-in-input">
+            <div><div class="sub-title">비밀번호</div></div>
+            <div><input type="email" placeholder="이메일을 입력해주세요."></input></div>
+          </div>
+
+          <div class="button-regular">
+              <div>로그인</div>
+          </div>
+
+          <div class="another-sign-up-info">
+            <div class="line"></div>
+            <div class="info">다른 계정으로 로그인</div>
+            <div class="line"></div>
+          </div>
+
+          <div class="another-sign-up">
+            <div class="another-logo-container">
+              <div>
+                <div class="google-logo"></div>
+                <div class="another-text">Google</div>
+              </div>
+              <div>
+                <div class="google-logo"></div>
+                <div>Naver</div>
+              </div>
+              <div>
+                <div class="google-logo"></div>
+                <div>Kakao</div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
-    </div>
   </body>
 </html>
