로그인 화면 퍼블리싱 2차

--- a/sign-in.html
+++ b/sign-in.html
@@ -40,17 +40,23 @@
 
           <div class="another-sign-up">
             <div class="another-logo-container">
-              <div>
-                <div class="google-logo"></div>
+              <div class="container">
+                <div class="google-logo">
+                  <img src="./image/google_logo.png"></img>
+                </div>
                 <div class="another-text">Google</div>
               </div>
-              <div>
-                <div class="google-logo"></div>
-                <div>Naver</div>
+              <div class="container">
+                <div class="google-logo">
+                  <img src="./image/naver_logo.png"></img>
+                </div>
+                <div class="another-text">Naver</div>
               </div>
-              <div>
-                <div class="google-logo"></div>
-                <div>Kakao</div>
+              <div class="container">
+                <div class="google-logo">
+                  <img src="./image/kakao_logo.png"></img>
+                </div>
+                <div class="another-text">Kakao</div>
               </div>
             </div>
           </div>
